# NES_Emulator

./: .gitignore  CMakeLists.txt  NES_Emulator.sln  NES_Emulator.vcxproj  NES_Emulator.vcxproj.filters  README.md
src/: main.cpp
src/display/: display.cpp  display.h  palette.cpp  palette.h
src/logger/: logger.cpp  logger.h
src/machine/: machine.cpp  machine.h
src/machine/apu/: apu.cpp  apu.h  dmc_channel.cpp  dmc_channel.h  frame_counter.cpp  frame_counter.h  noise_channel.cpp  noise_channel.h  pulse_channel.cpp  pulse_channel.h  triangle_channel.cpp  triangle_channel.h
src/machine/bus/: bus.cpp  bus.h
src/machine/cpu/: addressingmode.h  cpu.cpp  cpu.h  flags.cpp  flags.h  is_load.cpp  opcodes.cpp  opcodes.h  register.cpp  register.h
src/machine/input/: input.cpp  input.h  joypad.cpp  joypad.h
src/machine/mapper/: cnrom.cpp  cnrom.h  mapper.cpp  mapper.h  mmc1.cpp  mmc1.h  mmc3.cpp  mmc3.h  nrom.cpp  nrom.h  uxrom.cpp  uxrom.h
src/machine/memory/: memory.cpp  memory.h
src/machine/misc/: constants.h  instruction.cpp  instruction.h  machine_status.h  nes_data.h
src/machine/ppu/: ppu.cpp  ppu.h  ppuaddr.cpp  ppuaddr.h  ppuctrl.cpp  ppuctrl.h  ppudata.cpp  ppudata.h  ppumask.cpp  ppumask.h  ppuregisters.cpp  ppuregisters.h  ppuscroll.cpp  ppuscroll.h  ppustatus.cpp  ppustatus.h
src/machine/ppu/display/: display.cpp  display.h  palette.cpp  palette.h
src/machine/user_interface/: asm_list.cpp  asm_list.h  button.cpp  button.h  checkbox.cpp  checkbox.h  controls.cpp  controls.h  debugger.cpp  debugger.h  element.cpp  element.h  list.cpp  list.h  menu_bar.cpp  menu_bar.h  text.cpp  text.h  textbox.cpp  textbox.h  user_interface.cpp  user_interface.h  window.cpp  window.h  window_about.cpp  window_about.h  window_controls.cpp  window_controls.h  window_debugger.cpp  window_debugger.h
src/timing/: frame.cpp  frame.h  timer.cpp  timer.h
src/utility/: utility.cpp  utility.h
